--- a/src/Services/PlantInfo/Plantinfo.css
+++ b/src/Services/PlantInfo/Plantinfo.css
@@ -1,19 +1,13 @@
 form{
-    background: -moz-linear-gradient(45deg, #407342 0%, #d5e0d5 100%);
-    background: -webkit-linear-gradient(45deg, #407342 0%,#d5e0d5 100%);
-    background: linear-gradient(45deg, #407342 0%,#d5e0d5 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#407342', endColorstr='#d5e0d5',GradientType=1 );
+    background: transparent;
     border-radius: 10px;
-    width: 80%;
-    height: 200%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 10%;
-    color: #fff;
+    color:  #2f9476;
     font-family: 'Poppins', sans-serif;
-    font: 1em sans-serif;
+    font: .75rem 'Poppins', sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
@@ -25,13 +19,12 @@ form{
     overflow: hidden;
     transition: all .3s ease-in-out;
     box-shadow: 0 0 10px rgba(0,0,0,.3);
-    border: 1px solid #fff;
     border-radius: 10px;
 }
 
 input{
-    background: #fff;
-    border: 0;
+    background: transparent;
+    border: 2px solid #2f9476;
     border-radius: 10px;
     color: #407342;
     font-size: 30px;
@@ -39,13 +32,14 @@ input{
     margin: 10px;
     width: 50%;
     text-align: center;   
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
 }
 
 button{
-    background: #407342;
+    background: transparent;
     border: 0;
     border-radius: 10px;
-    color: #fff;
+    color:  #2f9476;
     font-size: 30px;
     margin-bottom: 5%;
 }
